# MINARI_airflow_utils

./: .gitignore  README.md  mkdocs.yml  setup.cfg  test.sh  utils.py
docs/: docs.md  index.md
report/test/: tests.xml
src/MINARI_airflow_utils_pip/: MINARI_airflow_utils_pip.py  __init__.py
tests/MINARI_airflow_utils_pip/: test_MINARI_airflow_utils_pip.py
