[metadata]
name = MINARI_airflow_utils_pip
version = 0.4.0
author = kjuheon
author_email = id.blahxblah@gmail.com
description = practice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://blahxblah.github.io/MINARI_airflow_utils
project_urls =
    Bug Tracker = https://github.com/blahxblah/MINARI_airflow_utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license = GNU General Public License (GPL)
platform = macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

